--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "jxlwqq/simditor": "^1.0",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
+        "mews/purifier": "~3.0",
         "overtrue/laravel-lang": "~3.0",
         "summerblue/laravel-active": "7.*"
     },
